--- a/ComCal_v0.1/ComCal_v0.1.vcxproj
+++ b/ComCal_v0.1/ComCal_v0.1.vcxproj
@@ -20,7 +20,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -55,7 +55,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies />
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <EntryPointSymbol>main</EntryPointSymbol>
     </Link>
@@ -78,21 +78,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="comAndTask.cpp" />
     <ClCompile Include="ComCalManager.cpp" />
     <ClCompile Include="Date.cpp" />
-    <ClCompile Include="Functions.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MonthForm.cpp" />
     <ClCompile Include="Task.cpp" />
+    <ClCompile Include="TextStorage.cpp" />
+    <ClCompile Include="timeDateInfo.cpp" />
+    <ClCompile Include="typeConversions.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="comAndTask.h" />
     <ClInclude Include="ComCalManager.h" />
     <ClInclude Include="Date.h" />
-    <ClInclude Include="Functions.h" />
+    <ClInclude Include="keywords.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="MonthForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="TextStorage.h" />
+    <ClInclude Include="timeDateInfo.h" />
+    <ClInclude Include="typeConversions.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MonthForm.resx">
