--- a/ComCal_v0.1/ComCal_v0.1.vcxproj
+++ b/ComCal_v0.1/ComCal_v0.1.vcxproj
@@ -84,6 +84,7 @@
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Delete.cpp" />
     <ClCompile Include="Edit.cpp" />
+    <ClCompile Include="ErrorLog.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MonthForm.cpp" />
     <ClCompile Include="Redo.cpp" />
@@ -103,6 +104,7 @@
     <ClInclude Include="Date.h" />
     <ClInclude Include="Delete.h" />
     <ClInclude Include="Edit.h" />
+    <ClInclude Include="ErrorLog.h" />
     <ClInclude Include="keywords.h" />
     <ClInclude Include="Redo.h" />
     <ClInclude Include="Search.h" />
