--- a/ComCal_v0.1/ComCal_v0.1.vcxproj
+++ b/ComCal_v0.1/ComCal_v0.1.vcxproj
@@ -20,7 +20,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -52,6 +52,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -81,6 +82,7 @@
     <ClCompile Include="Add.cpp" />
     <ClCompile Include="comAndTask.cpp" />
     <ClCompile Include="ComCalManager.cpp" />
+    <ClCompile Include="Command.cpp" />
     <ClCompile Include="Date.cpp" />
     <ClCompile Include="Delete.cpp" />
     <ClCompile Include="Edit.cpp" />
@@ -88,15 +90,14 @@
     <ClCompile Include="Load.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MonthForm.cpp" />
-    <ClCompile Include="Redo.cpp" />
     <ClCompile Include="Save.cpp" />
     <ClCompile Include="Search.cpp" />
     <ClCompile Include="Show.cpp" />
+    <ClCompile Include="support.cpp" />
     <ClCompile Include="Task.cpp" />
     <ClCompile Include="TextStorage.cpp" />
     <ClCompile Include="timeDateInfo.cpp" />
     <ClCompile Include="typeConversions.cpp" />
-    <ClCompile Include="Undo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Add.h" />
@@ -107,16 +108,17 @@
     <ClInclude Include="Delete.h" />
     <ClInclude Include="Edit.h" />
     <ClInclude Include="ErrorLog.h" />
+    <ClInclude Include="Exceptions.h" />
     <ClInclude Include="keywords.h" />
     <ClInclude Include="Load.h" />
     <ClInclude Include="rapidxml.hpp" />
     <ClInclude Include="rapidxml_iterators.hpp" />
     <ClInclude Include="rapidxml_print.hpp" />
     <ClInclude Include="rapidxml_utils.hpp" />
-    <ClInclude Include="Redo.h" />
     <ClInclude Include="Save.h" />
     <ClInclude Include="Search.h" />
     <ClInclude Include="Show.h" />
+    <ClInclude Include="support.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="MonthForm.h">
       <FileType>CppForm</FileType>
@@ -124,7 +126,6 @@
     <ClInclude Include="TextStorage.h" />
     <ClInclude Include="timeDateInfo.h" />
     <ClInclude Include="typeConversions.h" />
-    <ClInclude Include="Undo.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MonthForm.resx">
