--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ComCal_v0.1/Debug/
-ComCal_v0.1/ComCal_todo.xml
-ComCal_todo.txt
-ErrorLog.txt
+ComCalTest/Debug/
+systemTestOutput_ComCal/Debug/
 Debug/
-ComCal_v0.1.vcxproj
+ComCal_v0.1/ComCal_todo.xml
+ComCal_v0.1/ErrorLog.txt
