--- a/ComCal_v0.1/ComCal_v0.1.vcxproj.filters
+++ b/ComCal_v0.1/ComCal_v0.1.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClCompile Include="SearchCondition.cpp">
       <Filter>ComCalTypes\ComCalTypesCPP</Filter>
     </ClCompile>
+    <ClCompile Include="Done.cpp">
+      <Filter>ComCalCommands\ComCalCommandsCPP</Filter>
+    </ClCompile>
+    <ClCompile Include="Undone.cpp">
+      <Filter>ComCalCommands\ComCalCommandsCPP</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MonthForm.h">
@@ -187,6 +193,12 @@
     </ClInclude>
     <ClInclude Include="SearchCondition.h">
       <Filter>ComCalTypes\ComCalTypesHeader</Filter>
+    </ClInclude>
+    <ClInclude Include="Done.h">
+      <Filter>ComCalCommands\ComCalCommandsHeader</Filter>
+    </ClInclude>
+    <ClInclude Include="Undone.h">
+      <Filter>ComCalCommands\ComCalCommandsHeader</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
