Revert "Added demo tasks database .xml file, and release build .exe file."
This reverts commit 6064c90f9528d7140b3f7b841f03cf1660057056.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ComCal_v0.1/Debug/
 ComCalTest/Debug/
 systemTestOutput_ComCal/Debug/
+Debug/
 ComCal_v0.1/ComCal_todo.xml
 ComCal_v0.1/ErrorLog.txt
